<?xml version="1.0"?>
<package format="2">
  <name>tf_tutorial</name>
  <version>1.1.0</version>
  <description>
    Example TF
  </description>
  <license>Apache 2.0</license>
  <author email="dominik.belter@put.poznan.pl">Dominik Belter</author>
  <maintainer email="dominik.belter@put.poznan.pl">Dominik Belter</maintainer>
  <url type="website">http://www.put.poznan.pl</url>
  <buildtool_depend>catkin</buildtool_depend>
</package>
