<?xml version="1.0"?>
<package format="2">
  <name>tf_tutorial</name>
  <version>1.1.0</version>
  <description>
    Example TF
  </description>
  <license>Apache 2.0</license>
  <author email="dominik.belter@put.poznan.pl">Dominik Belter</author>
  <maintainer email="dominik.belter@put.poznan.pl">Dominik Belter</maintainer>
  <url type="website">http://www.put.poznan.pl</url>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
